--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <version>2.7.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <groupId>restapp</groupId>
     <artifactId>alanda.io</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
