--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,21 @@ services:
     ports:
       - "8080:8080"
     restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  spring-app:
+    image: alandademo:0.0.1-SNAPSHOT
+    ports:
+      - "8081:8081"
+    restart: on-failure
+    depends_on:
+      - camunda
+    links:
+      - camunda
 
 volumes:
   psql:
