Enable live mount file sharing for bpmn

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
       - camunda
     links:
       - camunda
+    volumes:
+      - ./src/main/resources/bpmn:/workspace/BOOT-INF/classes/bpmn
 
 volumes:
   psql:
