--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - psql:/var/lib/postgresql/data
 
   camunda:
-    image: camunda/camunda-bpm-platform
+    image: camunda/camunda-bpm-platform:run
     environment:
       - DB_DRIVER=org.postgresql.Driver
       - DB_URL=jdbc:postgresql://postgres:5432/camunda
